--- a/static/css/results_template.css
+++ b/static/css/results_template.css
@@ -396,7 +396,7 @@ body {
 }
 
 /* Loading screen background color for non-touchscreen devices */
-@media (hover: hover) and (pointer: fine) {
+@media (hover: hover) {
     .loader-wrapper-hover{
         background-color: #242f3f;
         transition: background-color .5s ease;
@@ -404,7 +404,7 @@ body {
 }
 
 /* Loading screen background color for touchscreen devices */
-@media (hover: none) and (pointer: coarse) {
+@media (hover: none) {
     .loader-wrapper-hover{
         background-color: #242f3f;
         transition: background-color .5s ease;
